# foldseek

./: .gitignore  .gitmodules  CMakeLists.txt  Cargo.toml  Dockerfile  P_mat.txt  README.md  azure-pipelines.yml  callgrind.out.1318580  callgrind.out.1318813  callgrind.out.1319601  callgrind.out.1320052  callgrind.out.1320938  callgrind.out.1321265  callgrind.out.1321378  callgrind.out.1322444  cuda-dev.yaml  cuda-dev.yml  probability_matrix.txt
.github/: ISSUE_TEMPLATE.md
benches/: rand_scan.rs
c/: Cargo.toml  Makefile  block_aligner.h
cmake/: FindCUDAToolkit.cmake  FoldseekSetupTest.cmake
data/: 3di_encoder_weights.kerasify  BLAST3D.mat  BLAST3D.out  CMakeLists.txt  cle.out  complexclust.sh  complexcluster.sh  complexsearch.sh  createclusearchdb.sh  easymsa.sh  (+46 more)
lib/3di/: CMakeLists.txt  Makefile  README.md  structureto12st.cpp  structureto12st.h  structureto3di.cpp  structureto3di.h  structureto3diseqdist.cpp  structureto3diseqdist.h
lib/3di/example/: d1qd6.1.ent
lib/foldcomp/: CMakeLists.txt  README.md
lib/foldcomp/src/: CMakeLists.txt  amino_acid.cpp  atom_coordinate.cpp  atom_coordinate.h  bond_info.h  database_reader.cpp  database_reader.h  database_writer.cpp  database_writer.h  discretizer.cpp  execution_timer.h  float3d.h  foldcomp.cpp  input_processor.h  main.cpp  nerf.cpp  sidechain.cpp  sidechain.h  structure_reader.cpp  structure_reader.h  torsion_angle.cpp  utility.cpp  utility.h
lib/pdbtools/: Acc_Surface.cpp  Acc_Surface.h  Ali_AFP.cpp  Ali_AFP.h  Ali_Ali3.cpp  Ali_Ali3.h  Ali_Ori.cpp  Ali_Ori.h  Align_Utility.h  BLOMAPS_Ori.cpp  BLOMAPS_Ori.h  BLOSEN.cpp  BLOSEN.h  BLOSEN_CLE.cpp  BLOSEN_CLE.h  Backbone_Sidechain.cpp  Backbone_Sidechain.h  Bioinfo_Code.cpp  Bioinfo_Code.h  CLEFAPS.cpp  CLEFAPS.h  CLEFAPS_CLE.cpp  CLEFAPS_CLE.h  CLEFAPS_Main.cpp  CLEFAPS_Main.h  CLEPAPS_Ori.cpp  CLEPAPS_Ori.h  CLEPAPS_Out.cpp  CLEPAPS_Out.h  CMakeLists.txt  Computation_Utility.cpp  Computation_Utility.h  Confo_Back.cpp  Confo_Back.h  Confo_Beta.cpp  Confo_Beta.h  Confo_Lett.cpp  Confo_Lett.h  Dynamic_Programming.cpp  Dynamic_Programming.h  (+50 more)
lib/prostt5/: .gitattributes  .gitignore  CMakeLists.txt  Cargo.toml  download_model.sh
lib/prostt5/c/: Cargo.toml  checksum.py  example.c  prostt5.h  vendor.sh
lib/prostt5/c/src/: lib.rs
lib/prostt5/c/stub/crc32fast/: Cargo.toml
lib/prostt5/c/stub/crc32fast/src/: lib.rs
lib/prostt5/c/stub/fancy_regex/: Cargo.toml
lib/prostt5/c/stub/num_cpus/src/: lib.rs
lib/prostt5/c/stub/rayon/: Cargo.toml
lib/prostt5/c/stub/rayon/src/: lib.rs
lib/prostt5/c/stub/tracing/src/: lib.rs
lib/prostt5/ggml/src/: ggml-backend-reg.cpp
lib/prostt5/ggml/src/ggml-cpu/: CMakeLists.txt  ggml-cpu.c
lib/prostt5/ggml/src/ggml-cuda/: CMakeLists.txt  common.cuh  ggml-cuda.cu
lib/prostt5/include/: llama.h
lib/prostt5/include/ctranslate2/models/: language_model.h
lib/prostt5/include/ctranslate2/ops/: conv2d.h  ops.h
lib/prostt5/prostt5/: CMakeLists.txt  convert.py  convert_cnn_weights.py  prostt5_cli.cc
lib/prostt5/python/ctranslate2/converters/: transformers.py
lib/prostt5/src/: cnn.rs  lib.rs  llama-vocab.cpp  llama-vocab.h  llama.cpp  main.rs  quantized_t5.rs  thread_pool.cc  utils.cc
lib/prostt5/src/cpu/: cpu_isa.cc  cpu_isa.h
lib/prostt5/src/cuda/: random.cu  random.h
lib/prostt5/src/layers/: prostt5cnn.cc  transformer.cc
lib/prostt5/src/ops/: conv2d.cc  conv2d_gpu.cu  gumbel_max_gpu.cu  multinomial_gpu.cu
lib/tmalign/: CMakeLists.txt  Coordinates.h  Kabsch.h  LICENSE  NW.cpp  NW.h  TMalign.cpp  TMalign.h  affineneedlemanwunsch.cpp  affineneedlemanwunsch.h  basic_fun.h  param_set.h  pdb2fasta.cpp  pdb2xyz.cpp  se.cpp  se.h  xyz_sfetch.cpp
src/: CMakeLists.txt  FoldseekBase.cpp  LocalCommandDeclarations.h  amino_acid.h  database_reader.h  discretizer.cpp  discretizer.h  float3d.h  foldcomp.h  foldseek.cpp  lib.rs  llama.cpp  logging.cc  main.cpp  neon.rs  nerf.h  scan_block.rs  scores.rs  simulate.rs  sse2.rs  strucclust.cpp  structure_reader.h  thread_pool.cc  torsion_angle.h  utility.cpp
src/commons/: CMakeLists.txt  CalcProbTP.h  Coordinate16.h  DaliZScore.cpp  DaliZScore.h  LDDT.cpp  LDDT.h  LocalParameters.cpp  LocalParameters.h  MSANode.cpp  MSANode.h  Newick.cpp  Newick.h  PathHasher.cpp  PathHasher.h  Sequence.h  StructSubstitutionMatrix.cpp  StructSubstitutionMatrix.h  StructureSmithWaterman.cpp  StructureSmithWaterman.h  StructureUtil.h  TMaligner.cpp  TMaligner.h
src/models/: language_model.cc
src/ops/: conv2d_cpu.cc
src/prefiltering/: IndexBuilder.h
src/strucclust/: CMakeLists.txt  convert2statealphabet.cpp  tmalign.cpp
src/strucclustutils/: CMakeLists.txt  EvalueNeuralNet.cpp  EvalueNeuralNet.h  FwBw_python.cpp  Fwbw.cpp  Fwbw.h  GemmiWrapper.cpp  GemmiWrapper.h  LoLAlign.cpp  LoLAlign.h  MultimerUtil.h  NearestNeighbourSW.cpp  NearestNeighbourSW.h  PareunAlign.cpp  PareunAlign.h  ProstT5.cpp  ProstT5.h  ProstT5ForkRunner.h  PulchraWrapper.cpp  PulchraWrapper.h  StructureSmithWaterman.cpp  StructureSmithWaterman.h  aln2tmscore.cpp  complexutil.h  compressca.cpp  convert2db.cpp  convert2pdb.cpp  convert2statealphabet.cpp  createSomeinterfacedb.cpp  createStructinterfacedb.cpp  createcomplexreport.cpp  createcomplexreport.h  createinterfacedb.cpp  createinterfacedbs.cpp  createmultimerreport.cpp  createstructsimpledb.cpp  createstructsubdb.cpp  expandcomplex.cpp  expandmultimer.cpp  filtercomplex.cpp  (+28 more)
src/test/: CMakeLists.txt  TestGenerateTree.cpp
src/workflow/: CMakeLists.txt  ComplexCluster.cpp  ComplexSearch.cpp  CreateCluSearchDb.cpp  CreateDimerDb.cpp  CreateSimpledb.cpp  EasyComplexCluster.cpp  EasyComplexSearch.cpp  EasyInterfaceCluster.cpp  EasyInterfaceSearch.cpp  EasyMSA.cpp  EasyMultimerCluster.cpp  EasyMultimerSearch.cpp  EasyStructureCluster.cpp  EasyStructureRbh.cpp  EasyStructureSearch.cpp  FilterComplex.cpp  InterfaceCluster.cpp  InterfaceSearch.cpp  MultimerCluster.cpp  MultimerSearch.cpp  Strucclustworkflow.cpp  StructTTYView.cpp  StructureCluster.cpp  StructureClusterUpdate.cpp  StructureEasyRbh.cpp  StructureIndex.cpp  StructureRbh.cpp  StructureSearch.cpp  testCC.cpp
(+247 files in other folders)
