add_library(pdbtools
        Acc_Surface.h
        Ali_AFP.h
        Ali_Ali3.h
        Ali_Ori.h
        Align_Utility.h
        BLOMAPS_Ori.h
        BLOSEN.h
        BLOSEN_CLE.h
        Backbone_Sidechain.h
        Bioinfo_Code.h
        CLEFAPS.h
        CLEFAPS_CLE.h
        CLEFAPS_Main.h
        CLEPAPS_Ori.h
        CLEPAPS_Out.h
        Computation_Utility.h
        Confo_Back.h
        Confo_Beta.h
        Confo_Lett.h
        Dynamic_Programming.h
        Envo_Align.h
        Fast_Sort.h
        Hydro_Bond.h
        Kabsch.h
        Mol_File.h
        Mol_Load.h
        Mol_Ori.h
        Mol_Out.h
        MultiAlign_Cent.h
        MultiAlign_Out.h
        PDB_Chain.h
        PDB_Chain_Fold.h
        PDB_File.h
        PDB_Residue.h
        PDB_To_CLE.h
        PDB_Utility.h
        PhiPsi_Trans.h
        TM_Align_Main.h
        TM_align.h
        TM_score.h
        Utility.h
        XYZ.h
        XYZ_DBT.h
        ZoomIn_Align.h
        Acc_Surface.cpp
        Ali_AFP.cpp
        Ali_Ali3.cpp
        Ali_Ori.cpp
        BLOMAPS_Ori.cpp
        BLOSEN.cpp
        BLOSEN_CLE.cpp
        Backbone_Sidechain.cpp
        Bioinfo_Code.cpp
        CLEFAPS.cpp
        CLEFAPS_CLE.cpp
        CLEFAPS_Main.cpp
        CLEPAPS_Ori.cpp
        CLEPAPS_Out.cpp
        Computation_Utility.cpp
        Confo_Back.cpp
        Confo_Beta.cpp
        Confo_Lett.cpp
        Dynamic_Programming.cpp
        Envo_Align.cpp
        Hydro_Bond.cpp
        Kabsch.cpp
        Mol_File.cpp
        Mol_Load.cpp
        Mol_Ori.cpp
        Mol_Out.cpp
        MultiAlign_Cent.cpp
        MultiAlign_Out.cpp
        PDB_Chain.cpp
        PDB_Chain_Fold.cpp
        PDB_File.cpp
        PDB_Residue.cpp
        PDB_To_CLE.cpp
        PDB_Utility.cpp
        PhiPsi_Trans.cpp
        TM_Align_Main.cpp
        TM_align.cpp
        TM_score.cpp
        Utility.cpp
        XYZ.cpp
        XYZ_DBT.cpp
        ZoomIn_Align.cpp
        )
mmseqs_setup_derived_target(pdbtools)


