[package]
name = "prostt5"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-or-later"

[lib]
crate-type = ["staticlib", "lib"]

[dependencies]
anyhow = "1.0.81"
#candle-core = {git = "https://github.com/huggingface/candle.git", package = "candle-core", rev = "b45c710" }
#candle-nn = {git = "https://github.com/huggingface/candle.git", package = "candle-nn", rev = "b45c710" }
#candle-transformers = {git = "https://github.com/huggingface/candle.git", package = "candle-transformers", rev = "b45c710" }
candle-core = "0.5.0"
candle-nn = "0.5.0"
candle-transformers = "0.5.0"
pico-args = "=0.5.0"
serde_json = "1.0.115"
tracing-chrome = { version = "0.7.2", optional = true }
tracing-subscriber = { version = "0.3.18", optional = true }

[features]
tracing = ["tracing-chrome", "tracing-subscriber"]
cuda = [
    "candle-core/cuda",
    "candle-nn/cuda",
    "candle-transformers/cuda",
]
cudnn = [
    "candle-core/cudnn",
]
metal = [
    "candle-core/metal",
    "candle-nn/metal",
    "candle-transformers/metal",
]

[profile.release-with-debug]
inherits = "release"
debug = true
